@@ -1,15 +1,12 @@
 package org.monarchinitiative.phenopacketlab.restapi.controller;
 
-import org.monarchinitiative.phenol.annotations.formats.hpo.HpoDisease;
 import org.monarchinitiative.phenol.ontology.data.TermId;
-import org.monarchinitiative.phenopacketlab.core.disease.DiseaseService;
-import org.monarchinitiative.phenopacketlab.restapi.controller.dto.OntologyClassDto;
+import org.monarchinitiative.phenopacketlab.core.DiseaseService;
+import org.monarchinitiative.phenopacketlab.core.model.IdentifiedConcept;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.function.Function;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping(value = "${api.version}/diseases")
@@ -21,22 +18,15 @@ public class DiseaseController {
         this.diseaseService = diseaseService;
     }
 
-    private static Function<HpoDisease, OntologyClassDto> diseaseToDto() {
-        return d -> new OntologyClassDto(d.id().getValue(), d.diseaseName());
-    }
-
     @GetMapping("{id}")
-    public ResponseEntity<OntologyClassDto> diseaseById(@PathVariable("id") String id) {
+    public ResponseEntity<IdentifiedConcept> diseaseById(@PathVariable("id") String id) {
         TermId diseaseId = TermId.of(id);
-        return ResponseEntity.of(diseaseService.diseaseById(diseaseId)
-                .map(diseaseToDto()));
+        return ResponseEntity.of(diseaseService.diseaseConceptById(diseaseId));
     }
 
     @GetMapping
-    public ResponseEntity<List<OntologyClassDto>> allDiseases() {
-        return ResponseEntity.ok(diseaseService.diseases()
-                .map(diseaseToDto())
-                .collect(Collectors.toList()));
+    public ResponseEntity<List<IdentifiedConcept>> allDiseases() {
+        return ResponseEntity.ok(diseaseService.allDiseaseConcepts().toList());
     }
 
 }
